@@ -43,12 +43,12 @@ public:
 	//! Returns the red component of the color. 
 	//! \return Returns a value between 0 and 255, specifying how red the color is.
 	//! 0 means dark, 255 means full red.
-	inline s32 getRed() const	{	return (c>>8) & 0xff;	}
+	inline s32 getRed() const	{	return (c>>16) & 0xff;	}
 
 	//! Returns the green component of the color. 
 	//! \return Returns a value between 0 and 255, specifying how green the color is.
 	//! 0 means dark, 255 means full green.
-	inline s32 getGreen() const	{	return (c>>16) & 0xff;	}
+	inline s32 getGreen() const	{	return (c>>8) & 0xff;	}
 
 	//! Returns the blue component of the color. 
 	//! \return Returns a value between 0 and 255, specifying how blue the color is.
