@@ -42,10 +42,10 @@ int main()
 	Vertex3 v[] =
 	{
 		{-1,-1,0},
-		{0,1,0},
-		{1,-1,0}
+		{1,-1,0},
+		{0,1,0}
 	};
-	kge::u16 i[] = {0,2,1};
+	kge::u16 i[] = {0,1,2};
 	VB = pRen->CreateVertexBuffer(v,3,sizeof(Vertex3));
 	IB = pRen->CreateIndexBuffer(i, 3);
 
@@ -93,7 +93,7 @@ int main()
 		pRen->SetVertexDeclaration(VD);
 		pRen->SetVertexBuffer(VB);
 		pRen->SetIndexBuffer(IB);
-		pRen->DrawTriangleList(3, 0);
+		pRen->DrawTriangleList(3, 3);
 		pRen->EndRendering();
 	}
 
